# fanatec-wheel

./: .gitattributes  .gitignore  CMakeLists.txt  Kconfig  README.md  env.bat  env.sh  west.yml
.github/workflows/: build.yml
.west/: config
app/: CMakeLists.txt  Kconfig  VERSION  prj.conf  sample.yaml  sysbuild.conf
app/boards/: fk723m1_zgt6.overlay
app/sim/: CMakeLists.txt  prj.conf  sample.yaml
app/sim/boards/: fk723m1_zgt6.overlay
app/sim/profiles/: base_twin.yaml  gen_profile.py
app/sim/src/: main.c
app/src/: clutch.c  clutch.h  debounce.h  diag_svc.c  diag_svc.h  dpad.c  dpad.h  encoder.c  encoder.h  funky.c  funky.h  health.c  health.h  input_svc.c  input_svc.h  lcd_svc.c  lcd_svc.h  led_svc.c  led_svc.h  link_spi.c  link_spi.h  lra_svc.c  lra_svc.h  main.c  output_svc.c  output_svc.h  power_mgr.c  power_mgr.h  rim_settings.c  rim_settings.h  rim_wdt.c  rim_wdt.h  seg7.c  seg7.h  session_info.h.in  tm1637.c  tm1637.h
app/sysbuild/: mcuboot.conf  mcuboot.overlay
boards/: README.md
docs/: README.md  Template.md  code-standards.md  codebase-summary.md  development-roadmap.md  fanatec-wheel-roadmap-and-system-spec.md  phase1-hardware-spec.md  phase1-software-spec.md  phases2-6-hardware-spec.md  phases2-6-software-spec.md  project-changelog.md  project-overview-pdr.md  release.md  spec-update.md  spec-updates.md  system-architecture.md  update-recovery.md
docs/compat/: matrix.md  matrix.yaml
docs/scripts/doc/: README.md  docx_postprocess.py  md_to_pandoc.py  my_style.docx  requirements.txt
docs/scripts/translator/: translate.py
docs/specs/: dma-irq-budget.md  hw_spec.md  pin_mapping.csv  steering_wheel_hw_spec.md  steering_wheel_pin_mapping.csv  steering_wheel_sw_spec.md
docs/studies/: README.md  accessories.md  add_ons.md  cockpits.md  communication-protocols.md  compatibility-matrix.md  glossary.md  motion.md  pedals.md  references.md  repos.md  sim_racing_knowledge_base_en.md  sim_racing_knowledge_base_vi.md  sim_racing_research.md  tactile.md  telemetry.md  wheel_base.md  wheel_rim.md
docs/studies/en/: README.md  accessories.md  add_ons.md  cockpits.md  communication-protocols.md  compatibility-matrix.md  encoder.md  force_feedback_explained.md  motion.md  pedals.md  repos.md  servo.md  sim_racing_knowledge_base.md  sim_racing_knowledge_base_en.md  sim_racing_research.md  sim_racing_studies_en.md  tactile.md  telemetry.md  tools.md  wheel_base.md  wheel_rim.md
docs/studies/vn/: README.md  accessories.md  add_ons.md  cockpits.md  communication-protocols.md  compatibility-matrix.md  force_feedback_explained.md  glossary.md  motion.md  pedals.md  references.md  repos.md  sim_racing_knowledge_base.md  sim_racing_knowledge_base_vi.md  sim_racing_research.md  sim_racing_studies_vi.md  tactile.md  telemetry.md  tools.md  wheel_base.md  wheel_rim.md
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: gpio_led.c
drivers/example_sensor/: CMakeLists.txt
dts/bindings/: vendor-prefixes.txt
lib/: CMakeLists.txt  Kconfig
lib/rimlink/: CMakeLists.txt  Kconfig  rimlink.h  rimlink_capture.c  rimlink_capture.h  rimlink_crc8.c  rimlink_frame.c  rimlink_link.c
scripts/: build_clean.py  pin_registry.py
scripts/capture/: README.md  field_activity.py  frame_model.py  la_decode.py  link_stats.py  render_matrix.py  ring_diff.py
scripts/capture/fixtures/: sample_la.csv  sample_ring_dump.txt
scripts/soak/: soak_runner.py
tests/func/example_sensor/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
tests/func/example_sensor/boards/: fk723m1_zgt6.overlay
tests/func/example_sensor/src/: main.c
tests/unit/app_logic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/app_logic/src/: main.c
tests/unit/rimlink/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/rimlink/src/: main.c
